# BdeB-420-J36-BB-AI-2

./: .gitignore  CMakeLists.txt  README.md
Source/: main.cpp
Source/Core/: Globals.h
